--- a/src/scss/plugins/light-mode/_colors.scss
+++ b/src/scss/plugins/light-mode/_colors.scss
@@ -37,7 +37,7 @@ $lm-form-color-border:                #b4b4b4;
 $lm-form-color-border-focus:          rgba(55, 175, 255, 0.781);
 $lm-form-color-disabled:              #8a8a8a;
 $lm-form-color-disabled-text:         #1b1b1b;
-$lm-form-checkradio-color:            #1d9acc;
+$lm-form-checkradio-color:            #4cc1f0;
 $lm-form-color-placeholder:           #4d4d4d;
 
 $lm-fieldset-color:                   #3f3f3f;
