add: Roboto Condensed as backup font for RTL

--- a/src/scss/plugins/rtl/_variables.scss
+++ b/src/scss/plugins/rtl/_variables.scss
@@ -1,4 +1,4 @@
-$rtl-font-family:   'Vazirmatn', sans-serif;
+$rtl-font-family: 'Vazirmatn', 'Roboto Condensed', sans-serif;
 
 $rtl-font-size: 1.5rem;
 $rtl-word-spacing: .12em;
