--- a/src/scss/plugins/light-mode/main.scss
+++ b/src/scss/plugins/light-mode/main.scss
@@ -190,6 +190,7 @@ html.light-mode {
   @include button-mixin(':active') {
     background-color: $lm-button-color-simple-active;
     border-color: $lm-button-color-simple-active;
+    color: $lm-meshki-white;
   }
 
   // Extra colors
@@ -252,17 +253,38 @@ html.light-mode {
   }
 
   /* Switch */
-  .slider {
-    border: 2px solid $lm-text-color;
-  }
+  .switch {
+    .slider {
+      border: 2px solid $lm-text-color;
+    }
 
-  .slider:before {
-    background-color: $lm-text-color;
-  }
+    .slider:before {
+      background-color: $lm-text-color;
+    }
 
-  .switch input:checked+.slider {
-    box-shadow: 0 0 10px rgba(9, 117, 241, 0.8);
-    border: 2px solid #0974f1;
+    & input:checked+.slider {
+      box-shadow: 0 0 10px #222222b9;
+    }
+
+    &.blue input:checked+.slider {
+      box-shadow: 0 0 10px rgba(9, 117, 241, 0.8);
+      border: 2px solid #0974f1;
+    }
+
+    &.green input:checked+.slider {
+      box-shadow: 0 0 10px #2ecc70d0;
+      border: 2px solid #2ecc71;
+    }
+
+    &.orange input:checked+.slider {
+      box-shadow: 0 0 10px #e67d22d2;
+      border: 2px solid #e67e22;
+    }
+
+    &.red input:checked+.slider {
+      box-shadow: 0 0 10px #e74d3ccc;
+      border: 2px solid #e74c3c;
+    }
   }
 
   input[type='range'] {
